added a anchor tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<p>Hello and welcom to my site! <br/> View my images!</p>
+		<p>Hello and welcom to my site! <br/><a href="images.html">
+ View my images!</a></p>
 	</body>
 </html>
